--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -2676,8 +2676,6 @@ ul.dot li {
 .examInfoGu4 .hTy {font-family: "NanumGothic-Bold", "Nanum Gothic", "나눔고딕", "sans-serif"}
 .examInfoGu4 .hTy4 {font-size:16px; font-weight:bold; color: #3e4831; line-height: 30px; border-bottom: 1px solid #cbcbcb;}
 
-
-
 /*가이드 텍스트 및 테이블 Css*/
 .gd_txt {text-align:left; margin:auto;  font-size:13px; color:#666; letter-spacing:-1px; line-height:40px; overflow:auto}
 .gd_txt h2 {font-family: "NanumGothic-Bold", "Nanum Gothic", "나눔고딕", "sans-serif"; border-top: 1px solid #5c6068; border-bottom: 1px solid #5c6068; background: #73806c; height: 40px; font-size:15px; font-weight:bold; color:#fff; clear:both; padding-left: 10px; margin-top:40px; line-height: 38px; letter-spacing:0}
@@ -3786,6 +3784,16 @@ table.lecWrapTable .lecInfoTable .w-sub .w-subtit {
     z-index: 105;
     width: 100%;
     height: 100%;
+}
+
+.willbes-Layer-popBox {
+    display: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    z-index: 11;
+    width: auto;
+    height: auto;
 }
 
 /* ================================================== */
@@ -5992,6 +6000,21 @@ ul.btnWrapbt li {
     width: 52px;
     line-height: 20px;
 }
+ul.btnWrapbt.popbtn li {
+    width: auto;
+    float: left;
+    margin-left: 10px;
+}
+ul.btnWrapbt.popbtn li a {
+    font-weight: 300;
+    border: 1px solid #bbb;
+}
+ul.btnWrapbt.popbtn li a:hover {
+    border: 1px solid #091940; 
+    background:#1f326a; 
+    color:#fff;
+}
+
 
 /* subContainer : Cart : 결제하기 : 결제금액리스트 */
 .willbes-Buylist-Price {
