--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -2691,6 +2691,7 @@ ul.dot li {
 .gd_table td {padding:7px 0; text-align:center; border-bottom:1px solid #ccc; border-right:1px solid #ccc; letter-spacing:0px; color:#585858; font-size:12px; line-height:18px;}
 .gd_table .td_13 {background: #efefef}
 .gd_table .td_14 {background: #f9f9f9}
+.gd_table td.txtL {text-align:left; padding-left: 15px;}
 .gd_txt12 {font-size:12px; color:#d8482d}
 .gd_txt13 {font-size:13px; color:#9b402f}
     
