--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -3789,10 +3789,10 @@ table.lecWrapTable .lecInfoTable .w-sub .w-subtit {
 
 .willbes-Layer-popBox {
     display: none;
-    position: absolute;
+    position: fixed;
     top: 50%;
     left: 50%;
-    z-index: 11;
+    z-index: 106;
     width: auto;
     height: auto;
 }
