lms css 수정 업로드

--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -199,7 +199,7 @@ body.no_sidebar {
     font-weight: 600;
     color: #fff;
     padding: 0 3px;
-    margin: 0 0 2px 0;
+    margin: -5px 0 0 0;
 }
 
 /* LMS */
