--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -165,9 +165,12 @@ body.no_sidebar {
     min-height: 14px;
     color: #707070;
 }
-.icheckbox_flat-blue,
-.iradio_flat-blue {
+.login_content .icheckbox_flat-blue,
+.login_content .iradio_flat-blue {
     background: url("../../vendor/iCheck/skins/flat/flat.png") no-repeat;
+    width: 15px;
+    height: 15px;
+    background-size: 118px;
 }
 
 .login_content .loginbox .checkbox .icheckbox_flat-blue {
