--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -744,16 +744,20 @@ button.btn-info {
     padding: 3px 11px 2px;
 }
 
-button.btn-primary.btn-search i {
+.text-right.form-inline button.btn-primary.btn-search i {
+    margin: 0;
+}
+
+button.btn-primary.btn-search i,
+.text-right button.btn-primary.btn-search i,
+.text-right button.btn-primary.btn-search.ml-10 i {
     font-family:monospace;
     width: 0px;
     margin: -5px;
     opacity: 0;
     animation: none;
 }
-.text-right button.btn-primary.btn-search i {
-    margin: 0;
-}
+
 
 .btn.active,
 .btn:active {
