css 수정 업로드2

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -3572,6 +3572,7 @@ table.lecWrapTable.lec-essential,
 table.lecWrapTable.lec-choice {
     overflow-x: hidden;
     overflow-y: auto;
+    height: auto;
     max-height: 484px;
     display: block;
 }
