css수정, onclick 버튼 수정 업로드

--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -3572,6 +3572,8 @@ table.lecWrapTable.lec-essential,
 table.lecWrapTable.lec-choice {
     overflow-x: hidden;
     overflow-y: auto;
+    height: auto;
+    max-height: 484px;
     display: block;
 }
 table.lecWrapTable .willbes-Lec-Table {
@@ -6448,8 +6450,8 @@ ul li.profList .Name img.N {
 }
 ul li.profList img.profImg {
     position: absolute;
-    right: 0;
-    bottom: 0;
+    right: 1px;
+    bottom: 1px;
 }
 ul li.profList img.Evt {
     position: absolute;
