--- a/public/css/willbes/style.css
+++ b/public/css/willbes/style.css
@@ -2348,7 +2348,7 @@ table.auTable tr td {
         .offAirBar ul {position:absolute; width:660px; left:180px; z-index:2; overflow:hidden; height:40px}
         .offAirBar li {line-height:40px; font-weight:bold; color:#fff}
 
-        
+
 
 /*********************************************     Main Container : Gosi     *********************************************/
 /* Main Container : Gosi */
@@ -9024,6 +9024,46 @@ table.PassZoneTable .w-data {
 }
 
 /* subContainer : Mypage : 온라인강좌 : willbes-Mypage-Txt */
+.bookmark-prof {
+    margin: 50px 0;
+    border-top: 1px solid #dedede;
+    border-bottom: 1px solid #dedede;
+}
+.bookmark-prof tr td {
+    font-size: 14px;
+    padding: 30px 0;
+    line-height: 20px;
+}
+.bookmark-prof tr td.w-prof {
+    text-align: center;
+}
+.bookmark-prof tr td .row-line {
+    background: #868686;
+    width: 1px;
+    height: 11px;
+    margin: 14px 10px;
+}
+table.bookmarkTable tr td {
+    padding: 14px 0;
+}
+table.bookmarkTable input[type="checkbox"] {
+    margin-right: 5px;
+}
+table.bookmarkTable tr td.w-bm-txt {
+    line-height: 25px;
+}
+table.bookmarkTable tr td.w-bm-txt textarea {
+    width: 210px;
+    height: 40px;
+    resize: none;
+    line-height: 14px;
+    padding: 10px;
+}
+table.bookmarkTable tr td.w-bm-txt .aBox {
+    float: right;
+    clear: both;
+    margin-right: 15px;
+}
 table.certifiTable th {
     background: #f9f9f9;
     font-weight: 600;
