lms > 목록 검색어 설정 스크립트 수정

--- a/public/css/lcms/custom.css
+++ b/public/css/lcms/custom.css
@@ -1006,7 +1006,7 @@ select.input-sm {
 
 /* vertical-align */
 .valign-middle {
-    vertical-align: middle;
+    vertical-align: middle !important;
 }
 
 /* cursor */
